vlib/v/checker/tests/labelled_break_continue.out
vlib/v/checker/tests/labelled_break_continue.vv:7:14: error: invalid label name `L2`
    5 |         i++
    6 |         for {
    7 |             if i < 7 {continue L2}
      |                       ~~~~~~~~
    8 |             else {break L2}
    9 |         }
vlib/v/checker/tests/labelled_break_continue.vv:8:10: error: invalid label name `L2`
    6 |         for {
    7 |             if i < 7 {continue L2}
    8 |             else {break L2}
      |                   ~~~~~
    9 |         }
   10 |     }
vlib/v/checker/tests/labelled_break_continue.vv:15:14: error: invalid label name `L1`
   13 |         i = e
   14 |         for {
   15 |             if i < 3 {continue L1}
      |                       ~~~~~~~~
   16 |             else {break L1}
   17 |         }
vlib/v/checker/tests/labelled_break_continue.vv:16:10: error: invalid label name `L1`
   14 |         for {
   15 |             if i < 3 {continue L1}
   16 |             else {break L1}
      |                   ~~~~~
   17 |         }
   18 |     }
